# feht

./: .gitignore  LICENSE  README.md  cabal.config  feht.cabal  feht_overview.puml  hstats.cabal  hstats_overview.puml  stack.yaml
app/: Main.hs
data/: test_binary.txt  test_metadata.csv  test_metadata.txt  test_snps.csv
src/: Comparison.hs  FET.hs  StorableByteString.hs  Table.hs  UserInput.hs
test/: FETSpec.hs  Spec.hs
test/integration/: Spec.hs
test/unit/: ComparisonSpec.hs  FETSpec.hs
