name:                feht
version:             1.1.0.0
synopsis:            Group comparisons for genomic data
description:         Please see README.md
homepage:            http://github.com/chadlaing/feht
license:             BSD3
license-file:        LICENSE
author:              Chad Laing
maintainer:          chadlaing@inoutbox.com
copyright:           2015 Chad Laing
category:            Genomics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     FET, Comparison, Table, StorableByteString
  build-depends:       base
                       , bytestring
                       , hashable
                       , unordered-containers
                       , vector
                       , statistics
                       , safe
                       , QuickCheck
  default-language:    Haskell2010

executable feht
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -optl-pthread -optl-static -fPIC -optc-Os
  build-depends:       base
                     , bytestring
                     , optparse-applicative
                     , unordered-containers
                     , feht
  default-language:    Haskell2010

test-suite feht-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , QuickCheck
                     , feht
                     , bytestring
                     , ieee754
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/chadlaing/feht
